--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ cache:
     - node_modules
 services:
   - docker
+env:
+  global:
+    - COMMIT=${TRAVIS_COMMIT::8}
 jobs:
   include:
     - stage: build-docker-image
@@ -22,29 +25,24 @@ jobs:
         # TODO use CI_COMMIT_SHORT_SHA travis equivalent instead of fixed version
 
     - stage: trivy
-      image:
-        name: knqyf263/trivy
-        entrypoint: [""]
-        variables:
-          TRIVY_AUTH_URL: hub.docker.com
-          TRIVY_USERNAME: $REGISTRY_USER
-          TRIVY_PASSWORD: $REGISTRY_PASS
-      tags:
-        - trivy
+      before_install:
+        # Trivy related tasks
+        - docker build -t trivy-ci-test:${COMMIT} .
+        - export VERSION=$(curl --silent "https://api.github.com/repos/aquasecurity/trivy/releases/latest" | grep '"tag_name":' | sed -E 's/.*"v([^"]+)".*/\1/')
+        - wget https://github.com/aquasecurity/trivy/releases/download/v${VERSION}/trivy_${VERSION}_Linux-64bit.tar.gz
+        - tar zxvf trivy_${VERSION}_Linux-64bit.tar.gz
       script:
-        - trivy --cache-dir .cache \
-          --exit-code 1 \
-          --severity HIGH,CRITICAL \
-          --format table --output report.md  \
-          --vuln-type os \
-          kristoyoyo/instant-search::v0.0.1
+        - ./trivy --exit-code 0 --severity HIGH --no-progress trivy-ci-test:${COMMIT}
+        - ./trivy --exit-code 1 --severity CRITICAL --no-progress trivy-ci-test:${COMMIT}
       cache:
-        key: trivy-cache
-        paths:
-          - .cache
+        directories:
+          - $HOME/.cache/trivy
       artifacts:
           name: "Container Scan Report v0.0.1"
           paths:
             - report.md
           expire_in: 7 days
           when: on_failure
+
+
+
