--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-prettier": "2.10.0",
     "eslint-plugin-import": "2.22.0",
     "eslint-plugin-prettier": "2.7.0",
+    "eslint-plugin-security": "^1.4.0",
     "prettier": "1.19.1"
   },
   "engines": {
