--- a/.travis.yml
+++ b/.travis.yml
@@ -16,29 +16,29 @@ jobs:
     - stage: build-docker-image
       script: 
         - echo "$REGISTRY_PASS" | docker login -u "$REGISTRY_USER" --password-stdin 
-        - docker build -t kristoyoyo/instant-search:v0.0.1 .
-        - docker image push kristoyoyo/instant-search:v0.0.1
+        - docker build -t kristoyoyo/instant-search:${COMMIT} .
+        - docker image push kristoyoyo/instant-search:${COMMIT}
+  
     - stage: docker-scan
       script: 
         - echo "$REGISTRY_PASS" | docker login -u "$REGISTRY_USER" --password-stdin 
-        - docker scan kristoyoyo/instant-search:v0.0.1
+        - docker scan kristoyoyo/instant-search:${COMMIT}
         # TODO use CI_COMMIT_SHORT_SHA travis equivalent instead of fixed version
 
-    - stage: trivy
+    - stage: container-composition-analysis-trivy
       before_install:
         # Trivy related tasks
-        - docker build -t trivy-ci-test:${COMMIT} .
         - export VERSION=$(curl --silent "https://api.github.com/repos/aquasecurity/trivy/releases/latest" | grep '"tag_name":' | sed -E 's/.*"v([^"]+)".*/\1/')
         - wget https://github.com/aquasecurity/trivy/releases/download/v${VERSION}/trivy_${VERSION}_Linux-64bit.tar.gz
         - tar zxvf trivy_${VERSION}_Linux-64bit.tar.gz
       script:
-        - ./trivy --exit-code 0 --severity HIGH --no-progress trivy-ci-test:${COMMIT}
-        - ./trivy --exit-code 1 --severity CRITICAL --no-progress trivy-ci-test:${COMMIT}
+        - ./trivy --exit-code 0 --severity HIGH --no-progress kristoyoyo/instant-search:${COMMIT}
+        - ./trivy --exit-code 1 --severity CRITICAL --no-progress kristoyoyo/instant-search:${COMMIT}
       cache:
         directories:
           - $HOME/.cache/trivy
       artifacts:
-          name: "Container Scan Report v0.0.1"
+          name: "Container Scan Report ${COMMIT}"
           paths:
             - report.md
           expire_in: 7 days
@@ -48,3 +48,5 @@ jobs:
       script:
         - echo "Deploy instant-search on a new env that use ArgoCD consist only to deploy project (argoproj.io/v1alpha1.AppProject) and application (argoproj.io/v1alpha1.Application)"
 
+  allow_failures:
+    - stage: container-composition-analysis-trivy
