--- a/helm/instant-search/values.yaml
+++ b/helm/instant-search/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: kristoyoyo/instant-search
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "v0.0.1"
+  tag: "v0.0.1" # TODO variabilize me
 
 imagePullSecrets: []
 
